--- a/Server/.settings/org.eclipse.wst.common.component
+++ b/Server/.settings/org.eclipse.wst.common.component
@@ -2,11 +2,11 @@
     <wb-module deploy-name="Server">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_share"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/sharesrc"/>
         <dependent-module archiveName="Share.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Share/Share">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="java-output-path" value="/Server/bin"/>
         <property name="context-root" value="Server"/>
+        <property name="java-output-path" value="/Server/bin"/>
     </wb-module>
 </project-modules>
